[package]
name = "PrimFilt"
version = "0.1.2"
edition = "2021"
authors = ["Neng Huang <neng@ds.dfci.harvard.edu>"]
description = "A long-read RNA-seq internal priming detection and filtering tool."
license = "MIT"
repository = "https://github.com/huangnengCSU/PrimFilt"
homepage = "https://github.com/huangnengCSU/PrimFilt"
readme = "README.md"

[dependencies]
rust-htslib = { version = "0.50.0", default-features = false }
clap = { version = "4.4.4", features = ["derive"] }
bio = "1.3.1"
rayon = "1.8"
chrono = "0.4.41"
flate2 = "1.1.2"
env_logger = "0.11.8"
log = "0.4.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1        # 开发时也有一定优化，提升测试速度

[profile.test]
opt-level = 2
